# somi-inference

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
benchmarks/: README.md  __init__.py  bench_decode.py  bench_e2e.py  bench_engine.py  bench_paged_attention.py  bench_prefill.py  common.py  profile_prefill.py  workloads.py
scripts/: render_resume_benchmark_report.py  run_cuda_benchmarks.sh  run_resume_benchmarks.sh
somi_inference/: __init__.py  tokenizer.py
somi_inference/core/: __init__.py  continuous_batching.py  flash_attention_triton.py  mlp_triton.py  model_runner.py  paged_attention.py  paged_attention_triton.py  sampler.py
somi_inference/entrypoints/: __init__.py  llm.py
somi_inference/models/: base.py  loader.py  qwen2.py  qwen2_adapter.py
tests/: README.md  conftest.py  test_model_loader.py  test_tokenizer.py
tests/benchmarks/: test_bench_decode.py  test_bench_e2e.py  test_bench_engine.py  test_common.py
tests/core/: test_continuous_batching.py  test_kv_cache_manager_write.py  test_model_runner.py  test_paged_attention.py  test_sampler.py
tests/entrypoints/: __init__.py  test_llm.py  test_llm_e2e.py
tests/integration/: __init__.py  test_paged_attention_integration.py
tests/models/: test_forward_context.py  test_qwen2.py  test_qwen2_adapter.py  test_qwen2_attention.py  test_qwen2_decoder_layer.py  test_qwen2_e2e.py  test_qwen2_error_handling.py  test_qwen2_mlp.py  test_qwen2_model.py  test_qwen2_weight_loading.py
tests_tdd/: README.md
tests_tdd/phase2/: test_tokenizer.py
tests_tdd/phase2/core/: __init__.py  test_continuous_batching_phase2.py  test_sampler.py
tests_tdd/phase2/entrypoints/: test_llm.py
